# gisp

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README.md  SECURITY.md  autogen.sh  configure.ac  data.txt  gisp.1
.github/workflows/: ci.yml
audit/: README  adversarial.sh  byteflip.c  constants.c  report.md
ci/: run.sh
doc/: Makefile.am  RELEASING.md  coverity.md  gisp.texi  openssf-best-practices.md
fuzz/: README.md  fuzz_decrypt.c  fuzz_password.c  fuzz_roundtrip.c  gisp.dict
include/: gettext.h  gisp.h
po/: LINGUAS  Makevars  POTFILES.in
proof/: overflow_proof.c
src/: Makefile.am  common.c  crypto.c  main.c  terminal.c
tests/: Makefile  Makefile.am  faultlib.c  overflow_diff.c  test_cli.sh  test_core.c  test_faults.sh  test_vectors.sh
tests/vectors/: README  passphrase  plaintext  v1_fixed.gisp  v1_streamed.gisp  v1_truncated.gisp
